【desktop】修复获取页面宽度的方法

--- a/app/desktop/css/page/_variables.scss
+++ b/app/desktop/css/page/_variables.scss
@@ -1,2 +1,2 @@
 $image-path: "../images";
-$layui-layer-img-path: "../images/component/layer/";
+//$layui-layer-img-path: "../images/component/layer/";
