【desktop】基本完善dialog（最小化，最大化，关闭）

--- a/app/desktop/css/style.css
+++ b/app/desktop/css/style.css
@@ -1300,6 +1300,10 @@ Pagination Styles
   filter: alpha(opacity=100);
 }
 
+.pkui-dialog-restore {
+  display: none;
+}
+
 .pkui-dialog-body {
   padding: 0;
   text-align: left;
