【desktop】1. 修复拖拽排序过程进行翻页的阈值处理；2. 扩展swiper参数，loopWithoutDuplicate

--- a/app/desktop/css/common/_launchpad.scss
+++ b/app/desktop/css/common/_launchpad.scss
@@ -42,6 +42,11 @@
     border: solid 1px rgba(255,255,255,0.1);
     background-color: rgba(0,0,0,.1);
 }
+.launchpad-LastShortcut-placeholder {
+    float: left;
+    width: 140px;
+    height: 140px;
+}
 .launchpad-shortcut-icon {
     display: block;
     width: 76px;
