--- a/app/desktop/css/style.css
+++ b/app/desktop/css/style.css
@@ -442,6 +442,12 @@ a {
   background-color: rgba(0, 0, 0, 0.1);
 }
 
+.launchpad-LastShortcut-placeholder {
+  float: left;
+  width: 140px;
+  height: 140px;
+}
+
 .launchpad-shortcut-icon {
   display: block;
   width: 76px;
