--- a/app/desktop/css/style.css
+++ b/app/desktop/css/style.css
@@ -1295,7 +1295,7 @@ Pagination Styles
   cursor: pointer;
   -webkit-appearance: none;
   opacity: 1;
-  filter: alpha(opacity=100);
+  filter: none;
 }
 
 .pkui-dialog-close:hover,
@@ -1303,7 +1303,7 @@ Pagination Styles
   cursor: pointer;
   outline: 0;
   opacity: 1;
-  filter: alpha(opacity=100);
+  filter: none;
 }
 
 .pkui-dialog-restore {
