【desktop】设置窗口的投影 --- “box-shadow: 1px 1px 50px rgba(0,0,0,.3);”

--- a/app/desktop/css/common/_dialog.scss
+++ b/app/desktop/css/common/_dialog.scss
@@ -64,3 +64,8 @@
     text-align: left;
     vertical-align: top;
 }
+
+.pkui-popup-focus .pkui-dialog,
+.pkui-dialog {
+    box-shadow: 1px 1px 50px rgba(0,0,0,.3);
+}
