【desktop】修复“前一页”、“后一页”使用透明png图且设置CSS透明度，在IE8下有黑边的问题

--- a/app/desktop/css/common/_launchpad.scss
+++ b/app/desktop/css/common/_launchpad.scss
@@ -73,23 +73,21 @@
     @include opacity(1);
 
 }
-.launchpad-pagination-previous {
+.launchpad-pagination-previous,
+.launchpad-pagination-next {
     position: absolute;
     z-index: 2;
     top: 50%;
-    left: 5%;
     margin-top: -30px;
     cursor: pointer;
+
+}
+.launchpad-pagination-previous {
+    left: 5%;
     @extend .icon-arrow-left;
-    @include opacity(.6);
-    &:hover {
-        @extend .launchpad-pagination-navItem-active;
-    }
 }
 .launchpad-pagination-next {
-    @extend .launchpad-pagination-previous;
     @extend .icon-arrow-right;
-    left: auto;
     right: 5%;
 }
 .launchpad-pagination-switchList {
