--- a/app/desktop/css/page/_topbar.scss
+++ b/app/desktop/css/page/_topbar.scss
@@ -31,6 +31,7 @@
     margin: 5px 3px 0 3px;
     height: 36px;
     width: 136px;
+    min-width: 60px;
     border-radius: 4px;
     padding-right: 26px;
     text-align: left;
