--- a/app/desktop/css/common/_css-sprite.scss
+++ b/app/desktop/css/common/_css-sprite.scss
@@ -134,3 +134,8 @@
     height: 16px;
     @include desktop-sprite(icon_win_min_hover);
 }
+.icon-dock-dropmenu-indicator {
+    width: 40px;
+    height: 40px;
+    @include desktop-sprite(icon_dock_dropmenu_indicator);
+}
