【desktop】显示快捷方式页签时，添加闪烁效果
通过CSS3动画实现

--- a/app/desktop/css/style.scss
+++ b/app/desktop/css/style.scss
@@ -10,6 +10,9 @@
 // 基础样式
 @import "../../../src/css/base/1.0.0/base";
 
+// CSS3动画
+@import "../../../src/css/base/animate/3.5.1/animate";
+
 // loading
 @import "common/loading";
 
