--- a/app/desktop/css/common/_dialog.scss
+++ b/app/desktop/css/common/_dialog.scss
@@ -3,6 +3,7 @@
     border-radius: 0;
     border: none 0;
     //box-shadow: 1px 1px 10px rgba(0,0,0,.3);
+    font-family: inherit;
 }
 
 .pkui-dialog-header {
